2006-06-13  Tim Omernick  <timo@apple.com>

        Reviewed by Anders.

        Fixed a recently-introduced assertion failure when handling 404 errors.

        * WebView/WebDataSource.m:
        (-[WebDataSource _handleFallbackContent]):
        Use the -[WebFrame _bridge] instead of -[WebDataSource _bridge].  The former is not valid until the data
        source has been committed, which is not the case when the resource fails to load.  The latter is safe to call
        at any time.  This broke last night with Maciej's change to WebFrameResourceLoader.  The old code used to
        call -[WebFrame _bridge].

2006-06-13  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Geoff.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=9406
        REGRESSION: fix for bug 9390 broke two layout tests

        * Plugins/WebPluginDatabase.h:
        (-[WebPluginDatabase isMIMETypeRegistered:]):
        Add new function isMIMETypeRegistered which returns whether a given MIME type has a 
        plugin registered. 

        * Plugins/WebPluginDatabase.m:
        (-[WebPluginDatabase init]):        
        Init set of registered MIME types.
        
        (-[WebPluginDatabase refresh]):
        Add and remove MIME types from the set of registered MIME types when registering and unregistering
        plugin MIME types.
        
        (-[WebPluginDatabase dealloc]):
        Release set of registered MIME types.
        
        * WebCoreSupport/WebFrameBridge.m:
        (-[WebFrameBridge determineObjectFromMIMEType:URL:]):
        Use isMIMETypeRegistered here.

2006-06-12  Maciej Stachowiak  <mjs@apple.com>

        - fix for cocoa exception (whoops)

        * WebView/WebView.m:
        (+[WebView _generatedMIMETypeForURLScheme:]): put this back
        * WebView/WebDataSource.m:
        (+[WebDataSource _generatedMIMETypeForURLScheme:]): call WebView

2006-06-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.
        